--- a/samples/dash-if-reference-player/index.html
+++ b/samples/dash-if-reference-player/index.html
@@ -320,6 +320,9 @@
                     </div>
                     <div class="panel-body panel-stats">
                         <p class="text-warning">{{audioBitrate}} kbps</p>
+                        <p class="text-primary">Languages:
+                          <select ng-options="lang as lang for lang in audioLanguages" ng-model="audioSelected" ng-change="audioChanged()"></select>
+                        </p>
                         <p class="text-primary">Rep Index: <span class="text-success">{{audioIndex}}</span><span class="text-warning">{{audioPendingIndex}}</span>/<span class="text-success">{{audioMaxIndex}}</span></p>
                         <p class="text-primary">Buffer Length: <span class="text-success">{{audioBufferLength}}</span></p>
                         <p class="text-primary">Latency: <span class="text-success">last {{audioLatencyCount}} segments</span></p>
